--- a/configure.ac
+++ b/configure.ac
@@ -10,6 +10,9 @@ AC_PROG_CXX
 AC_PROG_RANLIB
 AC_PROG_LIBTOOL
 
+AX_BOOST_BASE(1.42)
+AX_BOOST_PROGRAM_OPTIONS
+
 AC_CONFIG_FILES([
 	Makefile
 	src/Makefile	 
