Add gzipped distribution plus some needed autotools tweaks.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,3 +5,4 @@ servdisc_LDADD = ./libservdisc.la
 lib_LTLIBRARIES = libservdisc.la
 libservdisc_la_SOURCES = libservdisc.h libservdisc.cpp
 libservdisc_la_LDFLAGS = -lboost_program_options
+include_HEADERS = libservdisc.h
