Refactor Node, introduce svcd namespace.

--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT([libservdisc], [1.0], [kupczyk.tomasz@gmail.com])
+AC_INIT([libsvcd], [1.0], [kupczyk.tomasz@gmail.com])
 AC_CONFIG_AUX_DIR([./config])
 
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
@@ -11,7 +11,7 @@ AX_BOOST_PROGRAM_OPTIONS
 
 AC_CONFIG_FILES([
 	Makefile
-	src/Makefile	 
+	src/Makefile
 	tests/Makefile
 ])
 
