--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,11 @@
-bin_PROGRAMS = servdisc
-servdisc_SOURCES = servdisc.cpp
-servdisc_LDADD = ./libservdisc.la
+lib_LTLIBRARIES = libsvcd.la
 
-lib_LTLIBRARIES = libservdisc.la
-libservdisc_la_SOURCES = libservdisc.h libservdisc.cpp
-libservdisc_la_LDFLAGS = -lboost_program_options
-include_HEADERS = libservdisc.h
+libsvcd_la_SOURCES =     \
+	svcd_node.cpp        \
+	svcd_nodesfinder.cpp
+
+libsvcd_la_LDFLAGS = -lboost_program_options
+
+pkginclude_HEADERS =    \
+	svcd_node.h         \
+	svcd_nodesfinder.h
